[package]
name = "enhanced-pbft"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["The Mapleseed Inc."]
description = "PBFT-style consensus core with in-tree Time-Variant BLAKE3 IV and BLAKE3 reference (std only, zero dependencies)."
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/TheMapleseed/Enhanced-PBFT-mechanism"
keywords = ["pbft", "bft", "consensus", "blake3", "byzantine"]
categories = ["algorithms", "cryptography", "network-programming"]
exclude = [
    "third_party",
    ".github",
]

[dependencies]

[features]
default = []
persistence = []
metrics = []
network-tls = []

[package.metadata.docs.rs]
all-features = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
